<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <LinearLayout
        android:id="@+id/film_details_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/poster_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/poster"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_baseline_file_download_off_24" />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/poster_image_view"
            tools:text="Название фильма" />

        <TextView
            android:id="@+id/film_year_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/name_text_view"
            tools:text="@string/year" />

        <TextView
            android:id="@+id/countries_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/film_year_text_view"
            tools:text="@string/countries" />

        <TextView
            android:id="@+id/genres_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/countries_text_view"
            tools:text="@string/genres" />

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/genres_text_view"
            tools:text="@tools:sample/lorem/random" />

    </LinearLayout>

</ScrollView>